endpunkt umbenenannt und datenbank verbessert (noah)
